$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.13-0 (opened May 14, 2008) 
	
Version 1.12-15 (closed May 14, 2008)

	* capscale: prints info on possible metaMDS transformations, and
	uses metaMDSdist transformed data for getting species scores
	(similarly as metaMDS recently does).

	* ordiTerminfo: does not give superfluous warnings if constrained
	ordination called without constraints and without data=, like
	capscale(x ~ 1).

	* graphical functions: Graphical functions that also pass '...' to
	non-graphical functions (such as scores) now accept non-graphical
	arguments without issuing an warning. These warnings were harmless
	but it is neater to stop them happening in the first place. This
	is facilitated by the new internal function ordiArgAbsorber().

	* MOStest: added fieller.MOStest for approximate confidence
	intervals of the location of the hump or pit. The method is based
	on Fieller's theorem following ter Braak & Looman (Vegatatio 65,
	3-11; 1986) and profile based condifence limits following Oksanen
	et al. (Ecology 82, 1191-1197; 2001).  Both are based on the code
	from the ESA Ecological Archives accompanying Oksanen et
	al. (Ecology 82, 1191-1197; 2001) and published in package optgrad
	(http://www.esapubs.org/archive/ecol/E082/015/default.htm), but
	profile methods heavily borrow from the MASS package.

Version 1.12-14 (closed May 9, 2008)

	* mso: added Helene Wagner's mso function for direct multi-scale
	ordination or spatial partioning of 'cca' and 'rda'
	results (Ecology 85, 342-351; 2004). Thanks to Helene Wagner for
	allowing the inclusion of the code.

	* MOStest: new function to implement Mitchell-Olds & Shaw test for
	the location of quadratic extreme in a defined interval.

	* capscale: accepts now other dissimilarity function than vegdist,
	and optionally uses metaMDSdist to manipulate dissimilarities
	similarly as metaMDS. This provides now a one-shot unconstrained